Primeira atualização da página

--- a/index.html
+++ b/index.html
@@ -1,32 +1,4 @@
 
-Skip to content
-
-    Pull requests
-    Issues
-    Marketplace
-    Explore
-
-    @willmartinsmg
-
-66
-1,278
-
-    391
-
-dansup/bulma-templates
-Code
-Issues 2
-Pull requests 0
-Projects 1
-Insights
-bulma-templates/templates/landing.html
-a247413 on 3 Jul
-@rikyperdana rikyperdana tidy up (#79)
-@dansup
-@diomed
-@SmeeK153
-@rikyperdana
-102 lines (96 sloc) 4.66 KB
 <!DOCTYPE html>
 <html>
 
@@ -34,7 +6,7 @@ a247413 on 3 Jul
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Landing - Free Bulma template</title>
+    <title>William Martins</title>
     <link rel="shortcut icon" href="../images/fav_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
@@ -50,7 +22,7 @@ a247413 on 3 Jul
                 <div class="container">
                     <div class="navbar-brand">
                         <a class="navbar-item" href="../">
-                            <img src="http://bulma.io/images/bulma-type-white.png" alt="Logo">
+                            <h1>William Martins</h1>
                         </a>
                         <span class="navbar-burger burger" data-target="navbarMenu">
                             <span></span>
@@ -85,7 +57,7 @@ a247413 on 3 Jul
                                 </a>
                             </span>
                             <span class="navbar-item">
-                                <a class="button is-white is-outlined" href="https://github.com/dansup/bulma-templates/blob/master/templates/landing.html">
+                                <a class="button is-white is-outlined" href="https://github.com/willmartinsmg">
                                     <span class="icon">
                                         <i class="fa fa-github"></i>
                                     </span>
@@ -102,10 +74,10 @@ a247413 on 3 Jul
                 <div class="container has-text-centered">
                     <div class="column is-6 is-offset-3">
                         <h1 class="title">
-                            Coming Soon
+                            Done
                         </h1>
                         <h2 class="subtitle">
-                            $this is the best software platform for running an internet business. We handle billions of dollars every year for forward-thinking businesses around the world.
+                            Testando github pages.
                         </h2>
                         <div class="box">
                             <div class="field is-grouped">
@@ -128,19 +100,3 @@ a247413 on 3 Jul
 </body>
 
 </html>
-
-    © 2018 GitHub, Inc.
-    Terms
-    Privacy
-    Security
-    Status
-    Help
-
-    Contact GitHub
-    API
-    Training
-    Shop
-    Blog
-    About
-
-Press h to open a hovercard with more details.
